kubernetes/hexon-bgg/hexon-bgg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hexon-bgg-service
spec:
  selector:
    app: hexon-bgg-service
  ports:
  - port: 9020
    targetPort: 9020
    name: service
    protocol: TCP
  - port: 9021
    targetPort: 9021
    name: actuator
    protocol: TCP
  type: NodePort
